MapDisplay with visualisation